Fix image getting cut off at narrower window widths

--- a/ui/src/app/pages/home/home.page.scss
+++ b/ui/src/app/pages/home/home.page.scss
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    padding-top: 10px;
+    min-height: 100%;
     background-color: var(--theme-bg);
+    padding-top: 10px;
 
     .headshot {
         border-radius: 50%;
